--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.2.0'
 
-    api 'com.google.dagger:dagger:2.25.4'
+    implementation 'com.google.dagger:dagger:2.25.4'
     kapt 'com.google.dagger:dagger-compiler:2.25.4'
 }
 
