--- a/build.gradle
+++ b/build.gradle
@@ -3,30 +3,27 @@ plugins {
     id "org.jetbrains.kotlin.kapt" version "1.3.61"
 }
 
-group 'com.github.jcsla'
-version '1.0.0'
-
-repositories {
-    mavenCentral()
-    maven { url "https://jitpack.io" }
+allprojects {
+    group 'com.github.jcsla'
+    version '1.0.1'
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+subprojects {
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'org.jetbrains.kotlin.kapt'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    repositories {
+        mavenCentral()
+    }
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.2.0'
+    dependencies {
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    }
 
-    implementation 'com.google.dagger:dagger:2.25.4'
-    kapt 'com.google.dagger:dagger-compiler:2.25.4'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
 }
