--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,20 @@ plugins {
 }
 
 allprojects {
-    group 'com.github.jcsla'
-    version '1.0.1'
-}
-
-subprojects {
     apply plugin: 'org.jetbrains.kotlin.jvm'
     apply plugin: 'org.jetbrains.kotlin.kapt'
 
+    group 'com.github.jcsla'
+    version '1.0.1'
+
     repositories {
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:1.3.61"
     }
 
     compileKotlin {
